--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Vite + React + TS</title>
 </head>
 
-<body class="">
+<body class="dark">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
